--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="box">
     <div class="img">
-      <img src="/images/image-qr-code.png" alt="QR-code">
+      <img src="./images/image-qr-code.png" alt="QR-code">
     </div>
     <div class="text">
       <h1>Improve your front-end skills by building projects</h1>
