--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="box">
+  <main role="main">
+    <div class="container">
     <div class="img">
       <img src="./images/image-qr-code.png" alt="QR-code">
     </div>
@@ -21,12 +21,12 @@
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
     </div>
-  </div>
+  </main>
 
 
-  <div class="attribution">
+  <footer class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">J-F</a>.
-  </div>
+  </footer>
 </body>
 </html>
